[project]
name = "sqlpinger"
version = "0.1.0"
description = "A lightweight CLI tool to monitor SQL Server downtime periods"
authors = [
    {name = "gabrielrih@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
sqlpinger = "sqlpinger.cli:main"
