[project]
name = "sqlpinger"
version = "0.1.0"
description = "A lightweight CLI tool to monitor SQL Server downtime periods"
authors = [
    {name = "gabrielrih@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyodbc (>=5.2.0,<6.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "click (>=8.2.1,<9.0.0)"
]
packages = [{ include = "sqlpinger" }]

[tool.poetry]
version = "0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
sqlpinger = "sqlpinger.cli:main"

[tool.poetry.group.dev.dependencies]
freezegun = "^1.5.2"
pytest = "^8.4.0"
coverage = "^7.8.2"

[tool.semantic_release]
version_variables = [
    "sqlpinger/__init__.py:__version__"
]
# The NEW_VERSION variable is automatically injected by semantic_release: https://python-semantic-release.readthedocs.io/en/latest/configuration.html#build-command
build_command = "poetry version $NEW_VERSION && poetry build && ls -ls ./dist/"

[tool.semantic_release.branches.release]
match = "(main|master)"
prerelease = false

[tool.semantic_release.branches.prerelease]
match = ".*"
prerelease_token = "rc"
prerelease = true
